--- a/ web app/index.html
+++ b/ web app/index.html
@@ -1,9 +1,11 @@
-<html>
-    <head>
-        <title>Sample Webpage </title>
-    </head>
-
-    <body>
-        <h1>Heading 1 </h1>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <script src="script.js"></script>
+</body>
 </html>
