--- a/ web app/index.html
+++ b/ web app/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Calculalator</h1>
+
+    <form>
+        <input type="text">
+        <input type="submit"></input>
+    </form>
     <script src="script.js"></script>
 </body>
 </html>
